Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14930

Server has no clients to recover after failover

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      Several reports point to the problem with INACTIVE recovery_status on MDT and OSTs. Such status is reported when server has no clients in last_rcvd file to recover, but in reported cases there were clients for sure and servers were under load. 

            tappro Mikhail Pershin
            tappro Mikhail Pershin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: