lustre/ldlm/ldlm_lib.c
@@ -1843,6 +1843,7 @@ void target_cleanup_recovery(struct obd_device *obd)
 		return;
 	}
 	obd->obd_recovering = obd->obd_abort_recovery = 0;
+	obd->obd_abort_recov_mdt = 0;
 	spin_unlock(&obd->obd_dev_lock);
 
 	spin_lock(&obd->obd_recovery_task_lock);
@@ -2792,6 +2793,7 @@ static int target_recovery_thread(void *arg)
 	 */
 	spin_lock(&obd->obd_dev_lock);
 	obd->obd_recovering = obd->obd_abort_recovery = 0;
+	obd->obd_abort_recov_mdt = 0;
 	spin_unlock(&obd->obd_dev_lock);
 	spin_lock(&obd->obd_recovery_task_lock);
 	target_cancel_recovery_timer(obd);
